--- a/src/main/resources/assets/heart-gold/lang/zh_cn.json
+++ b/src/main/resources/assets/heart-gold/lang/zh_cn.json
@@ -6,6 +6,7 @@
   "block.heart-gold.overflow_gold_ore": "溢到爆表的金矿石",
   "block.heart-gold.overflow_deepslate_gold_ore": "溢到爆表的深层金矿石",
   "block.heart-gold.heartgold_block": "哈尔特黄金块",
+  "block.heart-gold.heart_portal_block": "哈尔特传送门框架",
   "block.heart-gold.heart_crafting_table": "哈尔特工作台",
-  "container.heart_crafting": "哈尔特工作台"
+  "tooltip.heartgold.heart_gold": "§7冒牌货.."
 }
