--- a/src/main/resources/assets/heart-gold/lang/zh_cn.json
+++ b/src/main/resources/assets/heart-gold/lang/zh_cn.json
@@ -1,6 +1,11 @@
 {
   "item.heart-gold.heartgold": "哈尔特黄金",
   "item.heart-gold.raw_heartgold": "粗制的哈尔特黄金",
+  "item.heart-gold.heartgold_sword": "哈尔特金剑",
+  "item.heart-gold.heartgold_pickaxe": "哈尔特金镐",
+  "item.heart-gold.heartgold_axe": "哈尔特金斧",
+  "item.heart-gold.heartgold_shovel": "哈尔特金铲",
+  "item.heart-gold.heartgold_hoe": "哈尔特金锄",
   "item.heart-gold.gold_water_bucket": "液化金桶",
   "itemGroup.heartgold_group": "哈尔特黄金",
   "block.heart-gold.heartgold_ore": "哈尔特黄金矿石",
@@ -10,5 +15,9 @@
   "block.heart-gold.heart_portal_block": "哈尔特传送门框架",
   "block.heart-gold.heart_crafting_table": "哈尔特工作台",
   "block.heart-gold.gold_water_block":"液化金",
-  "tooltip.heartgold.heart_gold": "§7冒牌货.."
+  "tooltip.heartgold.heart_gold": "§7冒牌货..",
+  "advancements.title.heart-crafting": "真是耀眼..",
+  "advancements.title.heart-portal": "新的维度",
+  "advancements.Content.heart-portal": "看起来很恶心",
+  "advancements.Content.heart-crafting": "现在,你可以制作5x5的东西了"
 }
