添加了一些东西

--- a/src/main/resources/assets/heart-gold/lang/en_us.json
+++ b/src/main/resources/assets/heart-gold/lang/en_us.json
@@ -18,6 +18,6 @@
   "tooltip.heartgold.heart_gold": "§7Faker..",
   "advancements.title.heart-crafting": "It's dazzling..",
   "advancements.title.heart-portal": "A new dimension",
-  "advancements.Content.heart-portal": "Looks disgusting",
+  "advancements.Content.heart-portal": "Try to make a structure similar to the Nether portal.",
   "advancements.Content.heart-crafting": "Now, you can make 5x5 stuff"
 }
