--- a/src/main/resources/assets/heart-gold/lang/zh_cn.json
+++ b/src/main/resources/assets/heart-gold/lang/zh_cn.json
@@ -18,6 +18,6 @@
   "tooltip.heartgold.heart_gold": "§7冒牌货..",
   "advancements.title.heart-crafting": "真是耀眼..",
   "advancements.title.heart-portal": "新的维度",
-  "advancements.Content.heart-portal": "看起来很恶心",
+  "advancements.Content.heart-portal": "试试做一个和下界传送门一样的结构",
   "advancements.Content.heart-crafting": "现在,你可以制作5x5的东西了"
 }
