添加了一些东西

--- a/src/main/resources/assets/heart-gold/lang/en_us.json
+++ b/src/main/resources/assets/heart-gold/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.heart-gold.heartgold": "HeartGold",
+  "item.heart-gold.flint_and_gold": "Flint and Gold",
   "item.heart-gold.raw_heartgold": "Raw HeartGold",
   "item.heart-gold.heartgold_sword": "Heart Gold Sword",
   "item.heart-gold.heartgold_pickaxe": "Heart Gold PickAxe",
@@ -16,6 +17,12 @@
   "block.heart-gold.heart_crafting_table": "Heart Crafting Table",
   "block.heart-gold.gold_water_block":"Liquefied Gold",
   "tooltip.heartgold.heart_gold": "§7Faker..",
+  "tooltip.heartgold.flint_and_gold": "§7What? What do you call this thing?",
+  "tooltip.heartgold.heartgold_sword": "§7Flames and fear turn into anger.",
+  "tooltip.heartgold.heartgold_hoe": "§7Flames and Lowly turn into unbending.",
+  "tooltip.heartgold.heartgold_shovel": "§7Flames and hatred turn into rise.",
+  "tooltip.heartgold.heartgold_axe": "§7Flames and scarcity turn into progress.",
+  "tooltip.heartgold.heartgold_pickaxe": "§7Flames and sorrow transform into resistance.",
   "advancements.title.heart-crafting": "It's dazzling..",
   "advancements.title.heart-portal": "A new dimension",
   "advancements.Content.heart-portal": "Try to make a structure similar to the Nether portal.",
