--- a/src/main/resources/assets/heart-gold/lang/zh_cn.json
+++ b/src/main/resources/assets/heart-gold/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "item.heart-gold.heartgold": "哈尔特黄金",
+  "item.heart-gold.flint_and_gold": "打金石",
   "item.heart-gold.raw_heartgold": "粗制的哈尔特黄金",
   "item.heart-gold.heartgold_sword": "哈尔特金剑",
   "item.heart-gold.heartgold_pickaxe": "哈尔特金镐",
@@ -16,6 +17,12 @@
   "block.heart-gold.heart_crafting_table": "哈尔特工作台",
   "block.heart-gold.gold_water_block":"液化金",
   "tooltip.heartgold.heart_gold": "§7冒牌货..",
+  "tooltip.heartgold.flint_and_gold": "§7什么?你管这个东西叫什么?",
+  "tooltip.heartgold.heartgold_sword": "§7烈焰与恐惧化作愤怒",
+  "tooltip.heartgold.heartgold_hoe": "§7烈焰与卑微化作倔强",
+  "tooltip.heartgold.heartgold_shovel": "§7烈焰与憎恨化作崛起",
+  "tooltip.heartgold.heartgold_axe": "§7烈焰与匮乏化作前进",
+  "tooltip.heartgold.heartgold_pickaxe": "§7烈焰与哀愁化作反抗",
   "advancements.title.heart-crafting": "真是耀眼..",
   "advancements.title.heart-portal": "新的维度",
   "advancements.Content.heart-portal": "试试做一个和下界传送门一样的结构",
